# sacopilot

./: .gitignore  README.md  app.py  dev.sh  pyproject.toml
apx/: .gitignore  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
apx/src/sacopilot/backend/: agent.py  app.py  approval.py  classifier.py  config.py  lakebase.py  mcp_glean.py  meeting_categorize.py  reply.py  salesforce.py  sync.py  taxonomy.py  usecase_gen.py  usecase_quality.py
apx/src/sacopilot/backend/routes/: agent.py  board.py  mail.py  meetings.py  usecases.py
apx/src/sacopilot/backend/tools/: classify.py  gmail_write.py  google.py  registry.py  vault.py
apx/src/sacopilot/ui/: index.html
apx/src/sacopilot/ui/components/: board-view.tsx  mail-view.tsx  meetings-view.tsx  usecases-view.tsx
apx/src/sacopilot/ui/lib/: api.ts  cockpit-api.ts
apx/src/sacopilot/ui/routes/: __root.tsx  board.tsx  index.tsx  mail.tsx  meetings.tsx  usecases.tsx
apx/src/sacopilot/ui/types/: routeTree.gen.ts
apx/tests/: test_classifier.py  test_sync.py  test_tabs.py
docs/specs/: 2026-06-19-sa-copilot-design.md  2026-06-19-sa-copilot-implementation-plan.md  2026-06-20-classification-flow-v2-design.md  2026-06-21-action-board-design.md  2026-06-21-apx-migration-design.md  2026-06-21-calendar-auto-categorisation-design.md  2026-06-21-email-redesign-design.md  2026-06-21-meetings-and-usecases-tabs-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
server/: agent.py  approval.py  classifier.py  config.py  google_client.py  lakebase.py  mcp_glean.py  mcp_google.py  reply.py  state.py  sync.py
server/routes/: agent.py  mail.py  meetings.py
server/tools/: classify.py  gmail_write.py  google.py  registry.py  vault.py
tests/: test_classifier.py  test_classify.py  test_smoke.py  test_sync.py
tests/fixtures/: emails.json
