[project]
name = "sacopilot"
version = "0.1.0"
description = "Personal Solutions Architect copilot — email triage + meeting capture/drafting"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.2",
    "psycopg[binary]>=3.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
