[project]
name = "sacopilot"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "databricks-sdk>=0.74.0",
    "anthropic>=0.40",
    "mcp>=1.2",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ty>=0.0.12",
]

[tool.apx.metadata]
app-name = "sacopilot"
app-slug = "sacopilot"
app-entrypoint = "sacopilot.backend.app:app"
api-prefix = "/api"
metadata-path = "src/sacopilot/_metadata.py"

[tool.apx.ui]
root = "src/sacopilot/ui"

[tool.apx.ui.registries]
"@animate-ui" = "https://animate-ui.com/r/{name}.json"
"@ai-elements" = "https://registry.ai-sdk.dev/{name}.json"
"@svgl" = "https://svgl.app/r/{name}.json"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.version]
path = "src/sacopilot/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/sacopilot/__dist__", "src/sacopilot/_metadata.py"]
exclude = ["src/sacopilot/ui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
